# phone-specs

./: .gitignore  README.md  pyproject.toml
src/phone_specs/: __init__.py  cache.py  cli.py  client.py  config.py  crawler.py  db.py  models.py  parser.py
tests/: test_cache.py  test_models.py
